# python-vitrageclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: cli.rst  installation.rst  readme.rst  usage.rst
releasenotes/notes/: add-template-by-string-ab6aff3badc279cd.yaml  add_alarm_show_api-9a9d91cf69c45a8e.yaml  add_cli_flag_to_wait_on_template_add_delete-05ea5dd038b18cd8.yaml  add_service_list-0d0720c6bd41e10e.yaml  add_status-e3fdc1e61696ade0.yaml  add_template_versions-b4b5e87c06a795c7.yaml  added-pagination-support-71c3a4a0fec59c82.yaml  alarm-counts-cli-0e91f391024163f8.yaml  drop-py-2-7-4a355df72edbe12c.yaml  event-post-api-e30548bb0a6fa6ac.yaml  multi-tenancy-support-b8d4cd83e9ded7bc.yaml  osc-support-fab94b809caa7eac.yaml  osc_update_command-bc2ad6363daaf2e4.yaml  osprofiler-787e801596a792eb.yaml  resource-list-8e913ffa069c02e5.yaml  resource-show-d742fe60a7d4a9eb.yaml  resource_count-52fc0ec86b983197.yaml  resource_list_query-5f5763fbff70bdcb.yaml  support-alarm-history-ce9c184ef0a35777.yaml  support-template-parameters-766ec9420d2502c5.yaml  support-webhooks-c4f1caabf53f2b82.yaml  support_dot_format-37691ee68c5610b3.yaml  support_graphml_format-e00d0806a3eceb05.yaml  support_template_show_and_add_by_name-19f6ec71d2d5b14c.yaml  template_crud-fcdfbb3ef23adc6a.yaml
releasenotes/source/: conf.py  index.rst  rocky.rst
tools/: tox_install.sh  vitrage.bash_completion
vitrageclient/: __init__.py  auth.py  client.py  exc.py  exceptions.py  noauth.py  osc.py  shell.py
vitrageclient/common/: exc.py  formatters.py  utils.py  yaml_utils.py
vitrageclient/tests/: base.py  test_template.py  test_vitrageclient.py  utils.py
vitrageclient/tests/cli/: base.py  test_event_post.py  test_topology_show.py
vitrageclient/tests/resources/: template1.yaml
vitrageclient/v1/: alarm.py  alarms.py  client.py  event.py  healthcheck.py  rca.py  resource.py  service.py  status.py  template.py  topology.py  webhook.py
vitrageclient/v1/cli/: alarm.py  alarms.py  event.py  healthcheck.py  rca.py  resource.py  service.py  status.py  template.py  topology.py  webhook.py
