[metadata]
name = python-vitrageclient
summary = Vitrage Client API Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    vitrageclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vitrage = vitrageclient.shell:main

keystoneauth1.plugin =
    vitrage-noauth = vitrageclient.noauth:VitrageNoAuthLoader

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vitrageclient/locale
domain = python-vitrageclient

[update_catalog]
domain = python-vitrageclient
output_dir = vitrageclient/locale
input_file = vitrageclient/locale/python-vitrageclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vitrageclient/locale/python-vitrageclient.pot
