[metadata]
name = python-vitrageclient
summary = Vitrage Client API Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-vitrageclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    vitrageclient
data_files =
    share = tools/vitrage.bash_completion

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    vitrage = vitrageclient.shell:main

keystoneauth1.plugin =
    vitrage-noauth = vitrageclient.auth:VitrageNoAuthLoader
    vitrage-keycloak = vitrageclient.auth:VitrageKeycloakLoader

openstack.cli.extension =
    rca = vitrageclient.osc

openstack.rca.v1 =
    rca_show = vitrageclient.v1.cli.rca:RcaShow
    rca_topology_show = vitrageclient.v1.cli.topology:TopologyShow
    rca_alarm_list  = vitrageclient.v1.cli.alarm:AlarmList
    rca_alarm_history  = vitrageclient.v1.cli.alarm:AlarmHistory
    rca_alarm_show  = vitrageclient.v1.cli.alarm:AlarmShow
    rca_alarm_count = vitrageclient.v1.cli.alarm:AlarmCount
    rca_resource_list = vitrageclient.v1.cli.resource:ResourceList
    rca_resource_show = vitrageclient.v1.cli.resource:ResourceShow
    rca_resource_count = vitrageclient.v1.cli.resource:ResourceCount
    rca_template_list = vitrageclient.v1.cli.template:TemplateList
    rca_template_show = vitrageclient.v1.cli.template:TemplateShow
    rca_template_validate = vitrageclient.v1.cli.template:TemplateValidate
    rca_template_add  = vitrageclient.v1.cli.template:TemplateAdd
    rca_template_delete = vitrageclient.v1.cli.template:TemplateDelete
    rca_event_post  = vitrageclient.v1.cli.event:EventPost
    rca_healthcheck = vitrageclient.v1.cli.healthcheck:HealthCheck
    rca_webhook_delete = vitrageclient.v1.cli.webhook:WebhookDelete
    rca_webhook_add  = vitrageclient.v1.cli.webhook:WebhookAdd
    rca_webhook_list = vitrageclient.v1.cli.webhook:WebhookList
    rca_webhook_show = vitrageclient.v1.cli.webhook:WebhookShow

vitrageclient.formatter.show =
    graphml = vitrageclient.common.formatters:GraphMLFormatter
    dot = vitrageclient.common.formatters:DOTFormatter
    json = cliff.formatters.json_format:JSONFormatter
    shell = cliff.formatters.shell:ShellFormatter
    table = cliff.formatters.table:TableFormatter
    value = cliff.formatters.value:ValueFormatter
    yaml = cliff.formatters.yaml_format:YAMLFormatter

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vitrageclient/locale
domain = python-vitrageclient

[update_catalog]
domain = python-vitrageclient
output_dir = vitrageclient/locale
input_file = vitrageclient/locale/python-vitrageclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vitrageclient/locale/python-vitrageclient.pot
